# cpp-project-template

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
benchmarks/: CMakeLists.txt  library_benchmark.cc
cmake/: CompilerWarnings.cmake
docker/: Dockerfile
scripts/: clang-format.sh  docker.sh
src/: CMakeLists.txt  hexdump.cc  library.cc  library.h
tests/: CMakeLists.txt  library_fuzz_test.cc  library_test.cc
